Tweaked HTML/CSS and changed some comments

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   </head>
 
   <body>
+
     <article>
       <header>
         <h1>Yellow Dunk Cards</h1>
       </header>
+
       <section>
-        <img src="img/square.png" alt="Product Image">
+        <img src="img/yellowcard.png" alt="Yellow Dunk Card">
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a lacus vitae nibh accumsan mollis et non dui. Nunc auctor velit eget sagittis condimentum. Quisque faucibus sapien nec semper posuere. Praesent eu odio sollicitudin, molestie.</p>
         <p class="availability">Available</p>
       </section>
+
       <section>
         <header class="specs">
           Specifications
@@ -27,6 +30,7 @@
           Specifications valid until: 04/01/2016
         </footer>
       </section>
+
       <section>
         <header class="pricing">
           Pricing
@@ -41,11 +45,13 @@
       <header>
         <h1>Red Dunk Cards</h1>
       </header>
+
       <section>
-        <img src="img/square.png" alt="Product Image">
+        <img src="img/redcard.png" alt="Red Dunk Card">
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a lacus vitae nibh accumsan mollis et non dui. Nunc auctor velit eget sagittis condimentum. Quisque faucibus sapien nec semper posuere. Praesent eu odio sollicitudin, molestie.</p>
         <p class="availability">Available</p>
       </section>
+
       <section>
         <header class="specs">
           Specifications
@@ -56,6 +62,7 @@
           Specifications valid until: 04/01/2016
         </footer>
       </section>
+
       <section>
         <header class="pricing">
           Pricing
@@ -70,11 +77,13 @@
       <header>
         <h1>Blue Dunk Cards</h1>
       </header>
+
       <section>
-        <img src="img/square.png" alt="Product Image">
+        <img src="img/bluecard.png" alt="Blue Dunk Card">
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a lacus vitae nibh accumsan mollis et non dui. Nunc auctor velit eget sagittis condimentum. Quisque faucibus sapien nec semper posuere. Praesent eu odio sollicitudin, molestie.</p>
         <p class="availability">Available</p>
       </section>
+
       <section>
         <header class="specs">
           Specifications
@@ -85,6 +94,7 @@
           Specifications valid until: 04/01/2016
         </footer>
       </section>
+
       <section>
         <header class="pricing">
           Pricing
@@ -99,11 +109,13 @@
       <header>
         <h1>Pink Dunk Cards</h1>
       </header>
+
       <section>
-        <img src="img/square.png" alt="Product Image">
+        <img src="img/pinkcard.png" alt="Pink Dunk Card">
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a lacus vitae nibh accumsan mollis et non dui. Nunc auctor velit eget sagittis condimentum. Quisque faucibus sapien nec semper posuere. Praesent eu odio sollicitudin, molestie.</p>
         <p class="availability">Available</p>
       </section>
+
       <section>
         <header class="specs">
           Specifications
@@ -114,6 +126,7 @@
           Specifications valid until: 04/01/2016
         </footer>
       </section>
+
       <section>
         <header class="pricing">
           Pricing
@@ -124,11 +137,14 @@
       </section>
     </article>
 
+<!-- These are spacers for left-justifying flex items that don't 
+     have three items on a row -->
     <article class="empties">
     </article>
 
     <article class="empties">
     </article>
-  </body>
   
+  </body>
+
 </html>
